# SE2308-QBasic

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  qbasic-app.cpp
include/backend/: Interpreter.h  Visitor.h  common.h  fragment.h
include/backend/parser/: BasicANTLR.h
include/frontend/: MainWindow.h  QBasicInterpreterWorker.h  qbasic.qrc
include/frontend/ui/: MainWindow.ui
lib/doctest/: CMakeLists.txt
src/: CMakeLists.txt
src/backend/: CMakeLists.txt  Interpreter.cpp  Visitor.cpp  common.cpp  fragment.cpp
src/backend/parser/: Basic.g4  CMakeLists.txt
src/frontend/: MainWindow.cpp  QBasicInterpreterWorker.cpp
test/: .clang-tidy  CMakeLists.txt  test_editor.cpp  test_interpreter.cpp
test/test_cases/: fibonacci.ast  fibonacci.in
